2005-10-05  Karl Berry  <karl@gnu.org>

	* util/texindex.c (maketempname): use mode 0600.

2005-10-02  Karl Berry  <karl@gnu.org>

	* util/texindex.c (maketempname): avoid race condition.
	(concat): now take three args, so rename to concat3.
	Debian bug 328365.

2005-09-30  Karl Berry  <karl@gnu.org>

	* configure.ac: reenable utils/defs generation, now that we have
	the files below.

2005-09-29  Akim Demaille  <akim@epita.fr>

	* doc/texinfo.txi: Document pdftexi2dvi.
	* doc/Makefile.am (common_texi2dvi_deps): New.
	Handle texi2pdf and pdftexi2dvi.
	* util/texi2dvi: Stop supporting shortened long options, as it's
	causing troubles.  Short options are here anyway.
	(local): Provide a default implementation if not supported by the
	shell.
	(findprog): Use return.
	(get_xref_files): Rename as...
	(xref_files_get): this.
	(xref_files_changed, xref_files_save): New.
	(run_tex_suite): New.
	(move_to_dest): Use `local'.
	($textra_cmd): Compute it in...
	(insert_commands): here.

	* tests/defs.in, tests/texi2dvi.test, tests/local.test: New.
	* configure.ac, tests/Makefile.am: Adjust.

2005-09-22  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi ($build_dir): New.
	(--build-dir): New.
	($usage): Adjust.
	($line_error): New.
	AUC-TeX wants regular TeX error messages, so don't require
	GNU style error message when under AUC-TeX.
	($filename_dir_abs): New.
	($t2ddir): When the build-dir is specified, make sure to avoid
	collisions between files with equal names, but in different
	directories.
	($command_line_filename): Decode possible TeX commands.
	* util/Makefile.am (pdftexi2dvi): New.

2005-09-20  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Be sure to return to the current directory even
	after obeying --clean.

2005-09-17  Sergey Poznyakoff  <gray@Mirddin.farlep.net>  (tiny change)

	* makeinfo/cmds.c (handle_include): don't expand @verbatiminclude,
	so that texi2dvi will pass it through to texinfo.tex.  Otherwise
	the dvi/pdf output is wrong.
