@@ -36,6 +36,16 @@ TEXI2DVI_pass --clean --batch input.texi -o output.dvi
 test "`list_files`" = "input.texi output.dvi"
 rm output.dvi
 
+TEXI2DVI_pass --build=clean --batch input.texi -o output.dvi
+# There should only be the DVI and the TEXI file.
+test "`list_files`" = "input.texi output.dvi"
+rm output.dvi
+
+TEXI2DVI_pass --build=tidy --batch input.texi -o output.dvi
+# There should only be the DVI and the TEXI file.
+test "`list_files`" = "input.t2d input.texi output.dvi"
+rm -r input.t2d output.dvi
+
 cp input.texi input2.texi
 
 TEXI2DVI_pass --clean --batch input.texi input2.texi
